修正一处洗脑循环逻辑错误 修正Readme主页链接

--- a/src/MukioPlayerPlus.mxml
+++ b/src/MukioPlayerPlus.mxml
@@ -27,7 +27,7 @@
 			import com.longtailvideo.jwplayer.player.Player;
 			import com.longtailvideo.jwplayer.utils.Strings;
 			
-			import flash.external;
+			import flash.external.*;
 			
 			import mx.controls.Alert;
 			import mx.events.FlexEvent;
