--- a/src/org/lala/components/skins/SparkTextAreaSkin.mxml
+++ b/src/org/lala/components/skins/SparkTextAreaSkin.mxml
@@ -266,7 +266,7 @@
     <s:Rect id="border" left="0" right="0" top="0" bottom="0">
         <s:stroke>
             <!--- @private -->
-            <s:SolidColorStroke id="borderStroke" weight="1"/>            
+            <s:SolidColorStroke id="borderStroke" color="0xCCCCCC" weight="1"/>            
         </s:stroke>
     </s:Rect>
 
