--- a/src/org/lala/components/skins/SparkTextInputSkin.mxml
+++ b/src/org/lala/components/skins/SparkTextInputSkin.mxml
@@ -217,7 +217,7 @@
     <s:Rect left="0" right="0" top="0" bottom="0" id="border">
         <s:stroke>     
             <!--- @private -->
-            <s:SolidColorStroke id="borderStroke" weight="1" />
+            <s:SolidColorStroke id="borderStroke" color="0xCCCCCC" weight="1" />
         </s:stroke>
     </s:Rect>
 
