--- a/src/org/lala/components/skins/SparkToggleButtonSkin.mxml
+++ b/src/org/lala/components/skins/SparkToggleButtonSkin.mxml
@@ -53,6 +53,7 @@
         {
             useChromeColor = true;
             super.initializationComplete();
+			//highLight.color.selectedUpStates = getStyle("themeColor");
         }
         
         /**
@@ -116,7 +117,7 @@
     <s:Rect id="fill" left="1" right="1" top="1" bottom="1" radiusX="2">
         <s:fill>
             <s:LinearGradient rotation="90">
-                <s:GradientEntry color="0xFFFFFF" 
+                <s:GradientEntry id="highLight" color="0xFFFFFF" 
                                color.selectedUpStates="0x0099FF"
                                color.overStates="0xEEEEEE" 
                                color.downStates="0xFFFFFF" 
