--- a/src/org/lala/components/NormalCommentInput.mxml
+++ b/src/org/lala/components/NormalCommentInput.mxml
@@ -34,8 +34,8 @@
             }
         ]]>
     </fx:Script>
-    <mk:CommentStyleChooser id="styleChooser" />
-    <mx:ColorPicker id="colorPicker" selectedColor="{styleChooser.stylePanel.color}" />
+    <mk:CommentStyleChooser id="styleChooser" toolTip="弹幕样式" />
+    <mx:ColorPicker id="colorPicker" selectedColor="{styleChooser.stylePanel.color}"  toolTip="弹幕颜色" />
     <s:TextInput id="textInput" width="100%" height="100%"  borderColor="0xDDDDDD" enter="sendButton_clickHandler(event)"
 				 prompt="装填弹药吧！"/>
 	<s:Button id="sendButton2" width="60" height="100%" click="sendButton_clickHandler(event)" skinClass="org.lala.components.skins.SendButtonSkin"/>
